--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,9 @@ android {
         applicationId "unifar.unifar.messagebottle"
         minSdkVersion 15
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        multiDexEnabled true
+        versionCode 2
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -32,6 +33,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.1.4'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.github.deano2390:MaterialShowcaseView:1.2.0'
+    implementation 'com.android.support:multidex:1.0.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
