--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
             android:theme="@style/AppTheme"
             android:name="android.support.multidex.MultiDexApplication"
     >
+        <meta-data android:name="google_analytics_adid_collection_enabled" android:value="false" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
